feat: added release scripts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,5 +61,7 @@ jobs:
           ref: master
 
       - uses: release-drafter/release-drafter@v5
+        with:
+          version: ${{ steps.version.outputs.next-version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
