--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ include = [
 python = ">=3.6.1,<4.0"
 fastapi = "^0"
 itsdangerous = "^2.0.1"
+pydantic = ">=2.0"
 
 mkdocs-material = { version = "^7.1.0", optional = true }
 markdown-include = { version = "^0.6.0", optional = true }
